Simplify swagger stuff after video
