# routes/index.js
@@ -1,9 +1,9 @@
 const router = require('express').Router();
 
-router.get('/', (req, res, next) => {
+router.get('/', (req, res) => {
   // #swagger.summary = 'Welcome message'
   // #swagger.description = 'Endpoint to return a welcome message.'
-  next();
+  // #swagger.tags = ['General']
   res.send('Hello World!');
 });
 
