# swagger.json
@@ -13,6 +13,9 @@
   "paths": {
     "/": {
       "get": {
+        "tags": [
+          "General"
+        ],
         "summary": "Welcome message",
         "description": "Endpoint to return a welcome message.",
         "responses": {
@@ -24,6 +27,9 @@
     },
     "/contacts/": {
       "get": {
+        "tags": [
+          "Contacts"
+        ],
         "summary": "Get all contacts",
         "description": "Endpoint to get all contacts from the database.",
         "produces": [
@@ -36,6 +42,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Contacts"
+        ],
         "summary": "Create a new contact",
         "description": "Endpoint to create a new contact in the database.",
         "parameters": [
@@ -76,6 +85,9 @@
     },
     "/contacts/{id}": {
       "get": {
+        "tags": [
+          "Contacts"
+        ],
         "summary": "Get a contact by ID",
         "description": "Endpoint to get a single contact by its ID.",
         "produces": [
@@ -96,6 +108,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Contacts"
+        ],
         "summary": "Update a contact by ID",
         "description": "Endpoint to update an existing contact by its ID.",
         "parameters": [
@@ -140,6 +155,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Contacts"
+        ],
         "summary": "Delete a contact by ID",
         "description": "Endpoint to delete a contact from the database by its ID.",
         "parameters": [
